# me5406-project

./: .gitignore  Group 10_Project2 Proposal.docx  README.md  SUBMISSION_CHECKLIST.md  environment.yml  evaluate.py  pyproject.toml  requirements.txt  train.py  visualize.py  visualize_ik.py  visualize_rrt_star.py
artifacts/archive/ur5e_obs1_20260421_1037/: ARCHIVE_SUMMARY.md
artifacts/archive/ur5e_obs1_20260421_1037/config/: obstacle_avoidance_env.py  training.py  ur5e_obstacle_scene.xml
artifacts/models/: README.md
artifacts/models/sac_arm_obs3_seed42/: actor.optimizer.pth  critic.optimizer.pth  data  ent_coef_optimizer.pth  policy.pth  pytorch_variables.pth  system_info.txt
artifacts/results/: README.md  eval_obs3.json  eval_ur5e_obs1.json  eval_ur5e_obs1_100ep.json
docs/: report_outline.md  video_checklist.md
scripts/: render_model_snapshot.py  run_experiment_suite.py  visualize_workspace.py
src/: baselines.py  evaluation.py
src/assets/universal_robots_ur5e/: ur5e.xml
src/me5406_drl_arm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/me5406_project/: __init__.py  baselines.py  evaluation.py  training.py
src/me5406_project/assets/: arm_3dof.xml
src/me5406_project/envs/: __init__.py  obstacle_avoidance_env.py
