[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "me5406-drl-arm"
version = "0.1.0"
description = "MuJoCo obstacle-avoidance grasping project for a 3-DOF robot arm"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "gymnasium>=0.29",
  "imageio>=2.34",
  "mujoco>=3.1",
  "numpy>=1.26",
  "rich>=13.7",
  "stable-baselines3>=2.3",
  "tensorboard>=2.16",
  "torch>=2.2",
  "tqdm>=4.66",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
